first print; chapters 1 and 5 still missing

--- a/contents.tex
+++ b/contents.tex
@@ -14,6 +14,7 @@
 %\cleardoublepage
 \markboth{Abbildungsverzeichnis}{Abbildungsverzeichnis}
 \listoffigures
+\todo[inline]{Beschreibungen der Abbildungen überarbeiten}
 
 %%======================================================================
 %%      Tabellenverzeichnis
@@ -21,6 +22,7 @@
 %\cleardoublepage
 \markboth{Tabellenverzeichnis}{Tabellenverzeichnis}
 \listoftables
+\todo[inline]{Beschreibungen der Tabellen überarbeiten}
 
 %======================================================================
 %  Literaturverzeichnis
@@ -35,9 +37,9 @@
 %%======================================================================
 %%      Algorithmenverzeichnis
 %%======================================================================
-\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
-\addcontentsline{toc}{chapter}{Algorithmenverzeichnis}
-\listofalgorithms
+%% \renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+%% \addcontentsline{toc}{chapter}{Algorithmenverzeichnis}
+%% \listofalgorithms
 
 %%======================================================================
 %%      Abkuerzungsverzeichnis
@@ -84,6 +86,9 @@ Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapo
 
 \end{tabularx}
 
+\todo[inline]{Scan auf neue Abkürzungen}
+\todo[inline]{Prüfen, ob die Abkürzungen im Text ordentlich eingeführt werden}
+
 %\begin{longtable}{lll}
 %
 %MOSFET & Metall-Oxid-Halbleiter-Feldeffekttransistor & metal-oxid-semiconductor field-effect transistor \\
@@ -100,7 +105,6 @@ Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapo
 $E_\text{A}$       & Aktivierungsenergie            \\
 $p_\text{partial}$ & Partialdruck                   \\
 $\tau$             & Dämpfungszeit des Thermostates \\
-$A_S^D$            & asd                            \\
 \end{tabularx}
 \todo[inline]{die wichtigsten Symbole automatisch aus allen Formeln exportieren}
 
