--- a/depositions.tex
+++ b/depositions.tex
@@ -90,7 +90,6 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten.
     Übersichten über mögliche Prozesse und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012}.
   }
-  \todo[inline]{Referenzen für abgeschiedene Systeme}
   \label{tab:deposition-materials}
 \end{table}
 
@@ -115,7 +114,7 @@ Auch eine physikalische Adsorption der Nebenprodukte auf der Oberfläche kann de
 Dabei sind stets die Prozesstemperaturen, -drücke, Reaktionsbarrieren und die Stabilität aller involvierten Moleküle zu betrachten, wodurch Chemische Gasphasenabscheidungen oft monatelanger Arbeit justiert werden müssen.
 Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollieren, was hinsichtlich einer gegenüber ALD vergleichsweise hohen \todo{ref}Wachstumsrate für viele Anwendungen ausreichend ist.
 
-\todo[inline]{Beispiel Precursor-Moleküle}
+\todo[inline]{Abbildung Beispiel Precursor-Moleküle}
 \missingfigure{Beispiel Precursor-Moleküle}
 
 \subsection{Atomlagenabscheidung}
@@ -128,7 +127,7 @@ Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollier
   \label{fig:ald-schema}
 \end{figure}
 
-Als Variation einer Chemischen Gasphasenabscheidung entstanden Atomlagenabscheidungen (ALD, Atomic Layer Deposition) mit dem Ziel\todo{Referenz}, konforme dünne Schichten kontrolliert in einzelnen Atomlagen mit Sub-Nanometer-Genauigkeit der Schichtdicke aufwachsen zu lassen.
+Als Variation einer Chemischen Gasphasenabscheidung entstanden Atomlagenabscheidungen (ALD, Atomic Layer Deposition) mit dem Ziel\todo{Referenz auf 50 Jahre altes Paper?}, konforme dünne Schichten kontrolliert in einzelnen Atomlagen mit Sub-Nanometer-Genauigkeit der Schichtdicke aufwachsen zu lassen.
 Dazu werden zwei Precursorgase wechselweise in separaten Schritten (Halbzyklen) in den Reaktor geleitet, wo sie wie bei CVD-Prozessen mit der Oberfläche reagieren und so langsam eine Schicht aufwachsen (Abbildung~\ref{fig:ald-schema}).
 Zwischen den Precursorschritten entfernen Spülschritte mit inertem Gas verbleibende Precursormoleküle und Nebenprodukte aus dem Reaktor und verhindern so gleichzeitige Reaktionen beider Precursorgase.
 So werden einerseits Gasphasenreaktionen vermieden, andererseits limitiert die Sättigung der Oberfläche mit Precursorliganden in jedem Precursorschritt die Zunahme der Dicke pro Zyklus.
@@ -156,7 +155,7 @@ Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Prec
   \oddrowcolors
   \caption[Überblick über Methoden zur Simulation von Gasphasenabscheidungen]{Überblick über Methoden zur Simulation von Gasphasenabscheidungen}
   \label{tab:deposition-simulations}
-  \todo[inline]{Referenzen!}
+  \todo[inline]{Referenzen notwendig?}
   \begin{tabularx}{\textwidth}{|XXlX|}
     \hline
     Methode                           & Anwendungsfeld                       & Größenordnung     & Grundlagen                          \\
