--- a/metadaten.tex
+++ b/metadaten.tex
@@ -38,7 +38,7 @@
 \newcommand{\dcdepartadvisor}{\dcdepartext}
 \newcommand{\dcgroupadvisor}{Simulationsgruppe}
 
-\newcommand{\dckeywords}{Enter Keywords Here}
+\newcommand{\dckeywords}{\todo[inline]{Enter Keywords Here}}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
