--- a/multilayer.tex
+++ b/multilayer.tex
@@ -26,7 +26,7 @@ Lagen schlechterer Qualität zeigen eine höhere Durchmischung der Schichten, wa
 Erst bei Verdopplung der Relaxationszeit bilden sich klar abgegrenzte Lagen aus, wie sie in Abbildung~\ref{fig:multilayerresults} dargestellt sind.
 
 In Anhang~\ref{appendix:multilayer} ist eine Auswahl von mehrlagigen Kupfer-Nickel-Schichten dargestellt, die durch Unterrelaxation verursachte strukturelle Fehler aufweisen.
-Bei größeren Systemen ist zudem mit Verspannungen aufgrund der unterschiedlichen Bindungslängen Gitterversetzungen und Fehlstellen zu rechnen, die allerdings durch \todo{Wort}Finite-Size-Effekte unterdrückt sein können.
+Bei größeren Systemen ist zudem mit Verspannungen aufgrund der unterschiedlichen Bindungslängen Gitterversetzungen und Fehlstellen zu rechnen, die allerdings durch Finite-Size-Effekte unterdrückt sein können.
 
 \begin{figure}
   \captionsetup[subfigure]{singlelinecheck=false}
