--- a/present.tex
+++ b/present.tex
@@ -42,13 +42,13 @@ Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupf
 
 \subsubsection{Silizium}
 Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Einschlägen in Abhängigkeit der Einschlagsenergie.
-\todo[inline]{PVD, Oberflächenoxidierung}
+\todo[inline]{mehr. PVD und Oxidation / Hydroxylierung von Oberflächen}
 
 \subsubsection{Aluminiumoxid}
 Für amorphe und kristalline \ce{Al2O3}-Bulks finden sich Simulationsergebnisse von \textsc{Alvarez et al.}\cite{alvarez_computer_1995,alvarez_molecular_1992} und von \textsc{Gutierrez et al.}\cite{gutierrez_molecular_2002} sowie für \ce{Al2O3}-Oberflächen von \textsc{Adiga et al.}\cite{adiga_atomistic_2006}.
 Sowohl Schmelzen als auch amorphes \ce{Al2O3} wurden unter anderem von \textsc{Gutierrez et al.}\cite{gutierrez_structural_2000} und \textsc{Vashishta et al.}\cite{vashishta_interaction_2008} simuliert.
 \textsc{Russo et al.}\cite{russo_molecular_2011} haben erfolgreich Oberflächen-Reaktionen zwischen einem Aluminium-Cluster und Wassermolekülen unter Nutzung der ReaxFF-Formulierung simuliert, während \textsc{Puri et al.}\cite{puri_thermo-mechanical_2010} das Schmelz- und Diffusionsverhalten von \ce{Al2O3}-ummantelten \ce{Al}-Nanopartikeln untersuchten.
-Diese Fülle an Simulationen wird jedoch nicht durch eine Veröffentlichung der Potentialparametrisierungen \todo{Wort}gedeckt, so dass dennoch nur eine kleine Zahl an \ce{Al2O3}-Potentialen zur Verfügung stehen.
+Diese Vielfalt an Simulationen zeigt sich jedoch nicht in der Zahl der veröffentlichten Potentialparametrisierungen, von denen nur eine kleine Zahl für \ce{Al2O3}-Simulationen zur Verfügung stehen.
 
 \subsubsection{Fazit}
 Die Untersuchungen beschränken sich meist auf \num{<10000} Atom, wodurch sich insbesondere bei der Bestimmung struktureller Eigenschaften Finite Size-Effekte bemerkbar machen können.
