--- a/settings.tex
+++ b/settings.tex
@@ -35,7 +35,7 @@
 \widowpenalty10000
 
 % eigene Definitionen
-\newcommand{\BigO}[1]{$\text{O}(#1)$}
+\newcommand{\BigO}[1]{$\mathcal{O}(#1)$}
 \newcommand{\mergedcell}[2][l]{\begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\ccross}{\ding{55}}
